# 3D-Physics-Engine

./: CMakeLists.txt  README.md
cmake/: FindCatch2.cmake  FindGLFW3.cmake  ParseAndAddCatchTests.cmake
include/glad/: glad.h
src/: GUI.cpp  GUI.hpp  exceptions.hpp  glad.c  main.cpp  objects.hpp
test/: main.cpp  test_GUI.cpp  test_GUI.hpp  test_main.cpp  test_objects.cpp  test_objects.hpp
